--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Desktop environment
-sudo apt-get install i3 polybar rofi feh
+sudo apt-get install i3 polybar rofi feh fonts-font-awesome
 
 # Tools
 sudo apt-get install neovim
