--- a/install
+++ b/install
@@ -20,3 +20,6 @@ curl -sL https://git.io/fisher | source && fisher install jorgebucaran/fisher
 
 # Install languages support for text editor (Helix)
 npm install -g vls dockerfile-language-server-nodejs vscode-langservers-extracted bash-language-server stylelint-lsp typescript-language-server typescript
+
+# Neovim stuff
+s apt-get install ripgrep eslint_d
