udpates nvim config for lsp and django html

--- a/install
+++ b/install
@@ -22,7 +22,7 @@ curl -sL https://git.io/fisher | source && fisher install jorgebucaran/fisher
 npm install -g vls dockerfile-language-server-nodejs vscode-langservers-extracted bash-language-server stylelint-lsp typescript-language-server typescript
 
 # Neovim stuff
-s apt-get install ripgrep
+s apt-get install ripgrep python3-pip
 
-npm i -g eslint_d
+npm i -g eslint_d djlint
 
