--- a/install
+++ b/install
@@ -4,7 +4,7 @@
 sudo pacman -S i3 i3lock polybar rofi feh xinput maim xclip 
 
 # Terminal tools
-sudo pacman -S alacritty neovim zsh tmux lazygit exa bat ripgrep fd tokei procs htop fzf zoxide
+sudo pacman -S alacritty neovim zsh tmux lazygit exa bat ripgrep fd tokei procs htop fzf zoxide postgresql-client
 
 # Apps
 signal-desktop spotify-launcher blueman docker docker-compose
